--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@ Angular or jQuery for repeating????
     <div class="container-fluid">
         <div class="row">
             <div ng-repeat="i in res | limitTo:16" class="col-xs-6 col-sm-4 col-md-3 col-lg-3 fix">
+            <!-- 
+                Row within a row, or col within a col, 
+             -->
                 <div class="container-fluid">
                     <div class="box-wrapper">
                         <div class="box">
